Correctly align discord username when displaying it below.

--- a/assets/index.css
+++ b/assets/index.css
@@ -253,6 +253,7 @@ section {
     align-items: center;
     position: absolute;
     top: 100%;
+    width: 100%;
     font-size: 2.5vw;
     background-color: transparent;
     margin-top: 0.25em;
